# 3PVG_Sound_Rialpe_Ferrufinome_Valeroce_Blancovi

CGame/: CMakeLists.txt  Readme.txt
CGame/src/: mainGame.cpp
CGame/tools/: cleanProyect.bat
CTool/: CMakeLists.txt  Readme.txt
CTool/src/: main.cpp  mainTool.cpp
CTool/tools/: genProyect.bat
Unity/Audio/Assets/: URP.asset
Unity/Audio/Assets/AudioBanks/Desktop/: Master.strings.bank
Unity/Audio/Assets/Old Sea Port/: Trailer Camera.controller
Unity/Audio/Assets/Old Sea Port/mesh/Materials/: Bark_Grey_1.mat  Log_End_1.mat  Material.007.mat  Material.011.mat  Material.012.mat  Material.013.mat  No Name.mat  planks_6.mat
Unity/Audio/Assets/Old Sea Port/scenes/: Dock Thing.unity
Unity/Audio/Assets/Old Sea Port/scenes/Dock Thing/: LightingData.asset  ReflectionProbe-0.exr  ReflectionProbe-1.exr  ReflectionProbe-2.exr  ReflectionProbe-3.exr  ReflectionProbe-4.exr  ReflectionProbe-5.exr  ReflectionProbe-6.exr  ReflectionProbe-7.exr  ReflectionProbe-8.exr
Unity/Audio/Assets/Old Sea Port/scenes/Dock Thing_Profiles/: Post-process Volume Profile_Old Sea Port.asset
Unity/Audio/Assets/Plugins/FMOD/Cache/Editor/: FMODStudioCache.asset
Unity/Audio/Assets/Prefabs/: EpicTrigger.prefab
Unity/Audio/Assets/Scenes/: LayeringScene.unity
Unity/Audio/Assets/Source/: Brancher.cs  EpicTrigger.cs  Layerer.cs  LoopableAmbiance.cs  MusicCrossFader.cs  OneShotEmitter.cs  RandomLayerToggling.cs
Unity/Audio/Assets/Source/Player/: PlayerController.cs
Unity/FmodProject/Master/.cache/: {8b37bace-a6cc-4cdb-9255-d75409b96ef8}.pdc  {ded649f5-ba26-4e10-a2dd-f0c81e5b4950}.pdc
Unity/FmodProject/Master/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
Unity/FmodProject/Master/Metadata/Asset/: {070b7de7-2445-4241-a989-b5a1948d8306}.xml  {16813362-0d76-45fe-882e-a8f7563e78cc}.xml  {1de95935-bf1a-4723-8d0b-edf160fd6051}.xml  {7225b57c-c75d-4734-ad70-f288f39e1d15}.xml  {f0591652-b9cd-409a-8847-b6ee308c501a}.xml
Unity/FmodProject/Master/Metadata/AudioFile/: {05bf8133-5cd0-4d23-acbb-1af44c5b4bd4}.xml  {13b69577-2a8f-4d2f-b9b2-b3a18fa07be8}.xml  {31f4cfb4-e8a3-495f-b0ca-47f9a49e715b}.xml  {35e639ab-b721-473a-aa1e-5f0ccab0d694}.xml  {53d30299-6ea6-49f8-84e7-3b4891277ef8}.xml  {6bad390e-6a65-4c60-ac46-0c131c0a152d}.xml  {749d629d-11fc-4846-a102-ebf767ce5d86}.xml  {840e4f8a-ae65-4d0d-8aa6-3cb944038099}.xml  {8b37bace-a6cc-4cdb-9255-d75409b96ef8}.xml  {9a53e1d2-7120-4f02-baf0-1e4c0b2d5e1f}.xml  {9c331e80-d5c9-4237-be47-b1727fdb0167}.xml  {a229f13d-2b41-43c5-9d86-fc35baa84fab}.xml  {aa9cceee-bf3b-4a33-9bd2-502cb8cfb55d}.xml  {bc0d6470-1199-400e-ba85-69861ba3128c}.xml  {c8ac0d0e-61ae-4948-9bad-c0d3a066f347}.xml  {ded36afa-0ca5-44a1-9f8d-7c9f78a8fab1}.xml  {ded649f5-ba26-4e10-a2dd-f0c81e5b4950}.xml
Unity/FmodProject/Master/Metadata/Bank/: {e056ba29-a0ea-4b1d-b79f-fbe8aaf25e2a}.xml
Unity/FmodProject/Master/Metadata/BankFolder/: {0b5ad924-1357-4a9f-b603-387e15d0c730}.xml
Unity/FmodProject/Master/Metadata/EffectPresetFolder/: {1f47b8a4-da18-4524-9ff3-22921205007c}.xml
Unity/FmodProject/Master/Metadata/EncodingSetting/: {afc09fb8-35ef-44bc-9c4b-2d797d628f76}.xml
Unity/FmodProject/Master/Metadata/Event/: {32c80391-1624-4d47-a913-01eb26c76e95}.xml  {51a42582-d304-4ad4-a77b-8428a8e80b9c}.xml  {542159d7-99b6-4a49-86c6-d947ee164717}.xml  {661d8aca-00fd-46b4-8855-8fbcf4536886}.xml  {78503c01-bfd6-42cf-9486-a09dda9c6674}.xml  {7fab9e08-8218-4a70-a078-9049a5388113}.xml  {942e8179-5b01-4284-9f7b-f49d2202e0c4}.xml
Unity/FmodProject/Master/Metadata/EventFolder/: {15c294bf-797b-404e-b3f8-b2878d0e28ad}.xml
Unity/FmodProject/Master/Metadata/Group/: {4e46dca3-a41d-4f48-bfa9-167db3558f48}.xml
Unity/FmodProject/Master/Metadata/ParameterPreset/: {03428343-b9a9-4c0e-9f5e-9853e31b2dfa}.xml  {103b1b71-8dd7-4cfa-b472-cc202c7a22f5}.xml  {227ccd4c-fd5e-47f2-9bf4-d8739dba27ec}.xml  {2f2a4a3b-7eec-490d-990f-724e5576e7f2}.xml  {455bfc89-97a8-44cf-916e-dea5c8f1f01f}.xml  {51587809-5a7e-44f9-8fb5-203aeab45b66}.xml  {70295a29-9123-4bcb-a75c-52ddc92fbd3b}.xml  {a0e567d0-9f6e-41b4-be55-159152fc9428}.xml  {e8e638de-f433-41ff-abdd-46f76c01ac21}.xml  {fa652379-1bda-4103-9e4e-a6124cc44bf3}.xml
Unity/FmodProject/Master/Metadata/ParameterPresetFolder/: {56a6c60a-199f-4758-a053-a521835a12de}.xml
Unity/FmodProject/Master/Metadata/Platform/: {31fc7e05-2ca2-40cb-a971-626de8eb5925}.xml
Unity/FmodProject/Master/Metadata/ProfilerFolder/: {02f3e4e5-d5be-416a-96a3-6467dbcca04d}.xml
Unity/FmodProject/Master/Metadata/Return/: {b6d7f1b3-ff11-4609-aed2-bbe0d66fa00f}.xml
Unity/FmodProject/Master/Metadata/SandboxFolder/: {eecfcc4f-f1a6-4958-b550-406691251863}.xml
Unity/FmodProject/Master/Metadata/SnapshotGroup/: {27198bc9-d38f-4853-a602-a6edcafdcea3}.xml
